		NSFileManager and NSBundle are properties (can be changed in runtime)
		Added "fallback suffix" support for "get full path" and "remove suffix" (disabled by default).
		On iPad the default suffix is "-ipad". Before it was ""
. [NEW] LabelAtlas: added .plist config file support. Easier to migrate games to higher resolutions.
. [NEW] LabelTTF: Added support for vertical alignment
. [FIX] All: Fixed compiler warnings. Format strings changed from %08X to %p
. [FIX] Deprecated: displayedFrame points to displayFrame avoiding infinite loop (issue #1347)
. [FIX] Director: Fixed projection. ViewPort is the size of the screen. Projection adjusted (issue #1355)
		Fixed crash when calling "end" on RetinaDisplay
		Only enable DepthTesting is the view has a depth buffer
		Does not raise assert if startAnimation is called when it is already animated.
. [FIX] Events: onMouseExit/Enter fixed on Mac
. [FIX] LabelBMFont: can be "init" without further arguments
		Glyphs with big yOffset are rendered correctly (issue #1343)
. [FIX] LabelTTF: Better support for custom TTF (Mac)
		Alignments and LineBreak modes values are the both on iOS and Mac. Needed for editors.
. [FIX] MotionStreak: Use "slow mode" default (workaround for issue #1358)
		The initial position will be the 1st "new" position. Prevents "tail" from (0,0)
. [FIX] NSThread+Block: fixed crash due to block not being copied to the heap
. [FIX] OpenGL: VAO are initialized on the cocos2d thread on machines that don't support shareables VAOs
. [FIX] Scheduler: Logs warnings with better precision (.4f instead of .2f) (issue #1362)
. [FIX] Sprite: setTexture when Batched, don't raise exception. Only if texture id is <> than batch.texture id
. [FIX] Templates: LICENSE_cocosdension -> LICENSE_CocosDension (issue #1363)
. [FIX] Texture: If defaultAlpha is RGBA8888 and image has no alpha, use RGBA8 instead of RGB565
		PVR textures sets the glTexParams before creating the texture. faster.